[FIX] web_editor: avoid horizontal scrollbar in right panel
In edit mode, languages like Lithuanian or Spanish may cause a
horizontal scrollbar to appear in the right panel when toggling the grid
view. This issue arises because the Add Elements widget and the button
text are too large,leading to overflow.

This commit improves the CSS for we-buttons to ensure buttons adapt to
the available width. When multiple buttons are present, their widths are
now evenly distributed, preventing overflow and ensuring a consistent
layout across languages.

task-4378522

--- a/addons/web_editor/static/src/scss/wysiwyg_snippets.scss
+++ b/addons/web_editor/static/src/scss/wysiwyg_snippets.scss
@@ -978,6 +978,7 @@
         we-selection-items {
             .o_we_user_value_widget {
                 margin-top: 0;
+                flex-grow: 1;
             }
         }
 
@@ -1165,13 +1166,16 @@
 
         // Button groups
         we-button-group.o_we_user_value_widget {
+            width: -webkit-fill-available;
+            width: -moz-available;
             we-selection-items {
                 display: flex;
-                max-width: 100%;
+                width: 100%;
 
                 we-button {
                     padding: 0 $o-we-sidebar-content-field-button-group-button-spacing;
                     border-radius: 0;
+                    flex: 1;
 
                     + we-button {
                         border-left: none;
@@ -1192,7 +1196,7 @@
             we-button {
                 display: flex;
                 justify-content: center;
-                flex: 0 1 percentage(1/4);
+                flex: 1 1 percentage(1/4);
                 padding: ($o-we-sidebar-content-field-button-group-button-spacing / 4) ($o-we-sidebar-content-field-button-group-button-spacing / 3);
                 text-align: center;
             }
@@ -2597,10 +2601,6 @@ we-button.o_grid {
 }
 
 we-select.o_grid we-toggler {
-    width: fit-content !important;
-}
-
-we-button-group.o_grid we-selection-items {
     width: fit-content !important;
 }
 
